--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>To Do List In JavaScript</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="todo.css">
   </head>
   <body>
     <div class="container">
@@ -35,6 +35,6 @@
       <div class="notification"></div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="todo.js"></script>
   </body>
 </html>
