--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </div>
         <div class="new-todo">
           <form id="todoform">
-            <input type="text" name="newtodo" id="newtodo" placeholder="Write Your Task" />
+            <input type="text" name="newtodo" id="newtodo" placeholder="Write Your Task here........" />
             <button type="submit">
               <i class="bi bi-plus-circle-fill"></i>
             </button>
